test/fixtures/esprima/invalid-syntax/.migrated_0033/actual.js
var source = 'x\\u005c';
